src/css/layout.css
@import url("https://fonts.googleapis.com/css?family=Roboto+Condensed|Roboto:400,700&display=swap");
.dark {
  background-color: #141d26 !important;
  color: white !important;
  font-family: "Roboto Condensed", sans-serif;
}
body {
  background-color: #f6f6f6;
}
.left-bar.ghost {
  opacity: 0;
}
.right-bar.ghost {
  opacity: 0;
}
main {
  display: grid;
  grid-template-columns: 1fr 3fr 1fr;
  grid-auto-rows: minmax(100px, auto);
  grid-auto-columns: minmax(100px, auto);
}
.header {
  grid-column: 2/3;
  grid-row: 1/3;
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  flex-wrap: wrap;
}
.header .break {
  flex-basis: 100%;
  flex: 0 100%;
  height: 0px;
}
.header .break-line {
  flex-basis: 100%;
  flex: 0 100%;
  height: 0px;
  margin: 1em 3em 1em;
  border: 1px solid black;
}
.header .break-line-dark {
  flex-basis: 100%;
  flex: 0 100%;
  height: 0px;
  margin: 1em 3em 1em;
  border: 1px solid white !important;
}
.header .title {
  text-align: center;
  padding-bottom: 0;
  margin: 0px auto auto;
}
.header .title.dark a {
  text-decoration: none;
  color: white;
}
.header .title.dark a:hover {
  color: rebeccapurple;
}
.header .title a {
  text-decoration: none;
  color: black;
}
.header .title a:hover {
  color: rebeccapurple;
}
.header .title .big {
  font-size: 2rem;
  margin: 0;
}
.header .title .small {
  font-size: 1.5rem;
  margin-top: 0px;
}
.header .title .nav {
  display: inline;
  padding: 0.25rem;
}
.header .toggle-flags {
  padding: 5px;
  font-family: "Roboto Condensed", sans-serif;
  font-size: 0.8rem;
  max-height: 15px;
  margin-top: 3px;
  margin-right: 3em;
}
.header .toggle-flags a {
  text-decoration: none;
  color: black;
}
.header .toggle-flags a:hover {
  color: rebeccapurple;
}
.header .toggle-flags.dark a {
  text-decoration: none;
  color: white;
}
.header .toggle-flags.dark a:hover {
  color: #ac7fd8;
}
.header .toggle-flags .flags {
  margin-right: 10px;
  cursor: pointer;
  transition: all 0.2s ease-in-out;
  max-height: 15px;
  max-width: 25px;
}
.header .toggle-flags .flags:hover {
  -webkit-transform: scale(1.1);
  -moz-transform: scale(1.1);
  -ms-transform: scale(1.1);
  transform: scale(1.1);
}
.header .toggle-flags .flagsactive {
  margin-right: 10px;
  max-height: 15px;
  max-width: 25px;
  -webkit-transform: scale(1.25);
  -moz-transform: scale(1.25);
  -ms-transform: scale(1.25);
  transform: scale(1.25);
  cursor: pointer;
}
.header .toggle-container {
  -webkit-transform: scale(0.5);
  -moz-transform: scale(0.5);
  -ms-transform: scale(0.5);
  transform: scale(0.5);
  display: -webkit-flex;
  -webkit-align-items: center;
  margin-left: 3em;
  align-items: center;
  font-family: "Roboto Condensed", sans-serif;
  font-weight: bold;
  height: 30px;
}
.header .title {
  font-family: "Roboto Condensed", sans-serif;
}
.center-content {
  grid-column: 2/3;
  grid-row: 3/10;
  padding: 0em 3em 3em;
  font-family: "Roboto", sans-serif;
}
.center-content .title {
  font-size: 3rem;
  font-weight: bold;
}
.center-content .sub-title {
  font-size: 1.5rem;
  font-weight: bold;
}
.center-content .text {
  font-size: 1rem;
}
.left-bar {
  grid-column: 1;
  grid-row: 1/10;
  -moz-transition: opacity 0.7s linear;
  -o-transition: opacity 0.7s linear;
  -webkit-transition: opacity 0.7s linear;
  transition: opacity 0.7s linear;
  display: flex;
  flex-direction: column;
  align-items: center;
}
.left-bar .icon-wrapper-left {
  margin: 0 auto;
  width: 250px;
  max-width: 250px;
  padding-top: 1em;
}
.left-bar .icon-wrapper-left.dark a {
  text-decoration: none;
  color: white;
}
.left-bar .icon-wrapper-left.dark a:hover {
  color: rebeccapurple;
}
.left-bar .icon-wrapper-left a {
  text-decoration: none;
  color: black;
}
.left-bar .icon-wrapper-left a:hover {
  color: rebeccapurple;
}
.left-bar .iconos {
  padding: 10px;
  font-size: 1rem;
}
.left-bar .iconos p {
  font-family: "Roboto Condensed", sans-serif;
  display: inline;
  padding-left: 5px;
}
.code {
  background: #f15025;
  display: inline-block;
  padding: 1rem;
  font-size: 1.2rem;
  color: var(--mainwhite);
  margin: 2rem 0;
}
.right-bar {
  grid-column: 3/4;
  grid-row: 1/10;
  -moz-transition: opacity 0.7s linear;
  -o-transition: opacity 0.7s linear;
  -webkit-transition: opacity 0.7s linear;
  transition: opacity 0.7s linear;
  opacity: 100;
}
#break {
  display: none;
}
@media (max-width: 1100px) {
  #break {
    display: block;
    margin: 1em auto 1em;
    flex-basis: 100%;
    flex: 0 100%;
    height: 0px;
    border: 1px solid;
  }
  main {
    display: flex;
    flex-direction: column;
  }
  .header {
    order: 1;
  }
  .left-bar {
    order: 2;
    display: flex;
    flex-direction: row;
    align-items: center;
    justify-items: center;
    justify-content: space-evenly;
  }
  .left-bar img {
    height: 150px;
  }
  .big {
    font-size: 1.5rem;
  }
  .center-content {
    order: 3;
  }
  .right-bar {
    order: 4;
    margin: 1em 1em 1em;
  }
  .left-bar.ghost {
    order: 5;
  }
}
@media (max-width: 488px) {
  .left-bar {
    order: 2;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-items: center;
    justify-content: space-evenly;
  }
  .left-bar img {
    margin-left: 0rem;
  }
  .header {
    align-content: center;
    justify-content: space-evenly;
  }
  .toggle-flags {
    margin: 0;
    margin-right: 0 !important;
    align-self: center;
  }
  .toggle-container {
    margin-left: 0 !important;
    margin-right: 0;
    align-items: center;
    font-family: "Roboto Condensed", sans-serif;
    font-weight: bold;
  }
  .big {
    font-size: 0.5rem;
  }
  .post-image span{
    display: block;
    max-width: 100% !important;
    margin: 2rem;
  }
}

